# confluent-kafka-go

./: README.md  Vagrantfile  download-build-librdkafka.sh
.github/workflows/: main.yml
examples/go-kafkacat/: go-kafkacat.go
kafka/: BUILD.bazel  kafka.go
kafka/librdkafka/: README.md  setup.sh
